--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,4 +1,5 @@
-@media (max-width: 1120px) {}
+@media (max-width: 1120px) {
+}
 
 @media (max-width: 992px) {
   .hero_area {
@@ -50,7 +51,6 @@
 }
 
 @media (max-width: 768px) {
-
   .about_section .detail-box {
     padding: 0;
     margin-bottom: 45px;
@@ -85,8 +85,6 @@
     flex-direction: column;
     align-items: center;
   }
-
-
 }
 
 @media (max-width: 576px) {
@@ -95,7 +93,8 @@
   }
 }
 
-@media (max-width: 480px) {}
+@media (max-width: 480px) {
+}
 
 @media (max-width: 420px) {
   .why_section .box {
