--- a/css/style.css
+++ b/css/style.css
@@ -819,8 +819,7 @@ a:focus {
 }
 
 .info_section .info_social img {
-  width: 35px;
-  margin: 10px;
+  margin: 10px 45px;
 }
 
 /* end info section */
