--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -627,7 +627,7 @@ pre code {
   display: flex;
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
-  width: 90%;
+  /* width: 90%; */
   /* margin-right: -15px; */
   /* margin-left: -15px; */
 }
