--- a/css/style.css
+++ b/css/style.css
@@ -406,3 +406,110 @@ body {
   color: #000000;
 }
 /*# sourceMappingURL=style.css.map */
+.animate-charcter {
+  text-transform: uppercase;
+  background-image: linear-gradient(
+    -225deg,
+    #231557 0%,
+    #44107a 29%,
+    #ff1361 67%,
+    #fff800 100%
+  );
+  background-size: auto auto;
+  background-clip: border-box;
+  background-size: 200% auto;
+  color: #fff;
+  background-clip: text;
+  /* text-fill-color: transparent; */
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  animation: textclip 2s linear infinite;
+  display: inline-block;
+  font-size: 3rem;
+}
+
+@keyframes textclip {
+  to {
+    background-position: 200% center;
+  }
+}
+
+@import url(https://fonts.googleapis.com/css?family=Montserrat);
+
+/* html,
+body {
+  height: 100%;
+  font-weight: 800;
+  margin: 0;
+  padding: 0;
+} */
+
+/* body {
+  background: #030321;
+  font-family: Arial;
+} */
+
+.containertaxi {
+  display: flex;
+  /* border: 1px solid red; */
+  /* height: 100%; */
+  align-items: center;
+}
+
+svg {
+  display: block;
+  font: 12em "מוניות יבנה";
+  width: 100%;
+  /* height: 300px; */
+  margin: 0 auto;
+}
+
+.text-copy {
+  fill: #000000;
+  /* stroke: rgb(250, 8, 230); */
+  stroke-dasharray: 6% 29%;
+  stroke-width: 8px;
+  stroke-dashoffset: 0%;
+  animation: stroke-offset 5.9s infinite linear;
+}
+
+.text-copy:nth-child(1) {
+  stroke: #000000;
+  animation-delay: -1s;
+}
+
+.text-copy:nth-child(2) {
+  stroke: #000000;
+  animation-delay: -2s;
+}
+
+.text-copy:nth-child(3) {
+  stroke: #000000;
+  animation-delay: -3s;
+}
+
+.text-copy:nth-child(4) {
+  stroke: #000000;
+  animation-delay: -4s;
+}
+
+.text-copy:nth-child(5) {
+  stroke: #000000;
+  animation-delay: -5s;
+}
+.text-copy:nth-child(6) {
+  stroke: #fffb00;
+  animation-delay: -6s;
+}
+
+@keyframes stroke-offset {
+  100% {
+    stroke-dashoffset: -35%;
+  }
+}
+
+/* bigshot one font
+@import url(https://fonts.googleapis.com/css?family=Cabin+Condensed);
+
+
+svg{font-weight:bold;max-width:600px;height:100%;} */
