--- a/css/style.css
+++ b/css/style.css
@@ -520,7 +520,6 @@ svg {
   justify-content: center;
   align-items: center;
 } */
-
 .rrtt {
   position: relative;
   display: flex;
@@ -540,8 +539,13 @@ input[type="checkbox"] {
   opacity: 0;
   cursor: pointer;
   height: 60px;
-  width: 100%;
+  width: 20px;
   z-index: 100;
+  margin-left: 6px;
+}
+.rrtt {
+  padding: 0;
+  margin: 0;
 }
 
 .letters {
