--- a/css/style.css
+++ b/css/style.css
@@ -70,6 +70,12 @@ body {
   background-image: url(../images/yavne-map2.png);
   background-size: cover;
 }
+/* .watertower {
+  min-height: 70vh;
+  position: relative;
+  background-image: url(../images/yavne-map2.png);
+  background-size:auto;
+} */
 
 .hero_area::before {
   content: "";
