--- a/css/style.css
+++ b/css/style.css
@@ -74,7 +74,7 @@ body {
   min-height: 70vh;
   position: relative;
   background-image: url(../images/watertower.png);
-  background-size:auto;
+  background-size:cover;
 }
 
 .hero_area::before {
