--- a/css/style.css
+++ b/css/style.css
@@ -157,7 +157,7 @@ body {
   font-size: 3rem;
 }
 
-.img-box{
+.img-box {
   display: flex;
   justify-content: center;
 }
@@ -1122,6 +1122,7 @@ input[type="checkbox"]:checked ~ div {
   position: fixed;
   right: -53px;
   bottom: 3px;
+  z-index: 999;
 }
 .coccoc-alo-ph-circle {
   width: 105px;
@@ -1203,7 +1204,7 @@ input[type="checkbox"]:checked ~ div {
   -moz-border-radius: 100%;
   border-radius: 100%;
   border: 2px solid transparent;
-  opacity: 0.7;
+  /* opacity: 0.7; */
   -webkit-animation: coccoc-alo-circle-img-anim 1s infinite ease-in-out;
   -moz-animation: coccoc-alo-circle-img-anim 1s infinite ease-in-out;
   -ms-animation: coccoc-alo-circle-img-anim 1s infinite ease-in-out;
