--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,13 @@
 html {
   overflow-x: hidden;
 }
+@media screen and (min-width: 768px) {
+  body {
+    width: 50%;
+    margin: 0 auto;
+  }
+}
+
 
 body {
   font-family: "Alef Hebrew", sans-serif;
@@ -77,7 +84,7 @@ body {
   background-size: cover;
 }
 
-.hero_area::before {
+/* .hero_area::before {
   content: "";
   position: absolute;
   top: 0;
@@ -87,7 +94,7 @@ body {
   background-image: url(../images/hero-bg2.png);
   background-size: 100%;
   background-repeat: no-repeat;
-}
+} */
 
 .sub_page .hero_area {
   min-height: auto;
@@ -438,19 +445,6 @@ body {
 
 @import url(https://fonts.googleapis.com/css?family=Montserrat);
 
-/* html,
-body {
-  height: 100%;
-  font-weight: 800;
-  margin: 0;
-  padding: 0;
-} */
-
-/* body {
-  background: #030321;
-  font-family: Arial;
-} */
-
 .containertaxi {
   display: flex;
   /* border: 1px solid red; */
@@ -460,10 +454,25 @@ body {
 
 svg {
   display: block;
-  font: 12em "מוניות יבנה";
+  font: 12rem "מוניות יבנה";
   width: 100%;
-  /* height: 300px; */
   margin: 0 auto;
+}
+
+@media screen and (max-width: 767px) {
+  svg {
+    font-size: 10rem;
+  }
+}
+
+.number{
+  width: 100%;
+  font-size: 5rem;
+}
+@media screen and (max-width: 767px) {
+  .number{
+    font-size: 3rem;
+  }
 }
 
 .text-copy {
@@ -512,16 +521,6 @@ svg {
 
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@900&display=swap");
 
-/* body {
-  padding: 0;
-  margin: 0;
-  height: 100vh;
-  background: #18191f;
-  font-family: "Poppins", sans-serif;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-} */
 .rrtt {
   position: relative;
   display: flex;
